--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -43,3 +43,11 @@ repos:
         entry: shellcheck
         language: system
         types: [shell]
+
+-   repo: local
+    hooks:
+    -   id: nixpkgs-fmt
+        name: nixpkgs-fmt
+        entry: nixpkgs-fmt
+        language: system
+        files: '.*\.nix'
